--- a/rentals/templates/rentals/flats_list.html
+++ b/rentals/templates/rentals/flats_list.html
@@ -2,21 +2,17 @@
 
 {% block content %}
 <header>
-  <h1>Searching For Gdańsk</h1>
+  <h1>Searching For {{cityname}}</h1>
 </header>
 <article>
   <section>
-    {% if flats_list %}
-  <ul>
-    {% for flats in flats_list %}
+    <ul>
+    {% for flats in cityname_filter %}
       <li>
-      {{ flats.adres }}
+        {{ flats.adres}}
       </li>
     {% endfor %}
   </ul>
-  {% else %}
-    <p>There are no available flats</p>
-  {% endif %}
   </section>
 </article>
 {% endblock %}
