--- a/rentals/templates/index.html
+++ b/rentals/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <header>
-  <h1>If you are going to rent our flat becareful! The are equipped with seven seasons The Game of Thrones.</h1>
+  <h1>If you are going to rent our flat becareful! They are equipped with seven seasons The Game of Thrones.</h1>
 </header>
 <article>
   <section>
@@ -13,7 +13,7 @@
         <hr class="my-4">
         <p>We offer flats in Gdańsk, Gdynia, Sopot.</p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="{% url 'rental_form' %}" role="button">Go!  </a>
+          <a class="btn btn-primary btn-lg" href="{% url 'city_panels' %}" role="button">Go!  </a>
         </p>
       </div>
     </div>
