--- a/rentals/templates/rentals/searching_panel.html
+++ b/rentals/templates/rentals/searching_panel.html
@@ -2,17 +2,14 @@
 
 {% block content %}
 <header>
-  <h1>Step 2. Set a date </h1>
+  <h1>Step 2. Set a date and pick your appartment </h1>
 </header>
 <article>
   <section>
     <div class="container-fluid">
       <div id="form-cont" class="justify-content-md-center">
-        <form action="" method="GET">
+        <form id="myform" action="" method="GET">
           {% csrf_token %}
-          <div class="input-group form-parts">
-            {{ form.miasto}}
-          </div>
           <div class="input-group form-parts">
             {{ form.data_wynajecia }}
             <div class="input-group-addon">
@@ -25,15 +22,21 @@
                 <span class="glyphicon-th"></span>
             </div>
           </div>
-          <input type="submit"  name="Submit" class="btn btn-info" value="Search">
+          <div class="form-parts">
+            <input type="submit" name="Submit" class="btn btn-info" value="Search">
+          </div>
+          <div class="clearboth">
+
+          </div>
         </form>
     </div>
-    <div>
+    <div id="flat-list">
       <ul>
         {% for flats in cityname_filter %}
          <li>
            {{flats.adres}}
            {{cityname}}
+           {{s}}
          </li>
          {% endfor %}
       </ul>
