--- a/rentals/static/css/styles.css
+++ b/rentals/static/css/styles.css
@@ -13,8 +13,7 @@ h1
 }
 img
 {
-  max-width: 100%;
-  max-height: 100%;
+  width:100%;
 }
 label
 {
@@ -102,7 +101,69 @@ a:active
 {
     z-index:'1001';
 }
-#flat-list
+
+.flat-list-elements
 {
-  visibility: hidden;
+  border:2px solid #2d5986;
+  margin:2%;
+  position:relative;
+}
+.flat-list-img
+{
+  width:30%;
+  float:left;
+}
+.flat-list-info
+{
+  color: #00004d;
+  float:left;
+  width:70%;
+}
+.flat-list-header
+{
+  float:left;
+  margin-top:2%;
+  width:70%;
+}
+.flat-list-prize
+{
+  float:right;
+  background-color: #ff8566;
+  padding:1%;
+  border-bottom-left-radius: 25px;
+}
+.flat-list-desc
+{
+  margin:2%;
+  border:2px dotted #002080;
+  text-align:left;
+  background-color: rgba(0, 32, 128, 0.1);
+  padding:1%;
+}
+.kaucja-true
+{
+  background-color: #80ff80;
+}
+.kaucja-false
+{
+  background-color: #ff3333;
+}
+.kaucja-div-position
+{
+  position:absolute;
+  right:0;
+  bottom:0;
+  padding:1%;
+  border-top-left-radius: 25px;
+}
+.error-list
+{
+  text-align:left;
+  color:red;
+  margin-top:1%;
+}
+.unavailable-flats-info
+{
+  color:#2d5986;
+  font-size:36px;
 }
