full post method with reservation filter

--- a/rentals/static/css/styles.css
+++ b/rentals/static/css/styles.css
@@ -125,6 +125,10 @@ a:active
   margin-top:2%;
   width:70%;
 }
+.flat-list-header a
+{
+  color:#00004d;
+}
 .flat-list-prize
 {
   float:right;
@@ -166,4 +170,59 @@ a:active
 {
   color:#2d5986;
   font-size:36px;
+}
+#flat-detail-content
+{
+  border:4px solid #9999ff;
+  padding-left:1%;
+}
+#flat-detail-info
+{
+  float:left;
+  font-size:36px;
+  position:relative;
+  width:50%;
+  height:442px;
+  padding-top:1%;
+}
+#flat-detail-photo
+{
+  float:right;
+  width:50%;
+  padding:1%;
+  padding-left:0;
+}
+#flat-details-desc
+{
+  font-size:24px;
+  color:#000080;
+  text-align: justify;
+  padding:1%;
+  padding-right:2%;
+  border-top:2px dotted #002080;
+  border-bottom:2px dotted #002080;
+}
+#flat-detail-header
+{
+  margin-top:10%;
+  text-align:left;
+  color:#00004d;
+}
+#flat-detail-form
+{
+  float:left;
+}
+.pos-response-mess
+{
+  float:left;
+  color: #1aff1a;
+  font-size:16px;
+  border:2px solid #1aff1a;
+  padding:5px;
+}
+.neg-response-mess
+{
+  float:left;
+  color: #00004d;
+  font-size:24px;
 }
