bofore doing disabled dates calendar

--- a/rentals/templates/rentals/flats_detail.html
+++ b/rentals/templates/rentals/flats_detail.html
@@ -35,6 +35,12 @@
                     <span class="glyphicon-th"></span>
                 </div>
               </div>
+              <div class="input-group form-parts">
+                {{ form.mieszkanie }}
+                <div class="input-group-addon">
+                    <span class="glyphicon-th"></span>
+                </div>
+              </div>
               <div class="form-parts">
                 <input type="submit" name="Submit" class="btn btn-info" value="Rent">
               </div>
