--- a/rentals/templates/index.html
+++ b/rentals/templates/index.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 <header>
-  <h1>If you are going to rent our flat becareful! They are equipped with seven seasons The Game of Thrones.</h1>
+  <div class="header-div">
+    <h1>If you are going to rent our flat becareful! They are equipped with seven seasons The Game of Thrones.</h1>
+  </div>
 </header>
 <article>
   <section>
