--- a/rentals/templates/rentals/flat_detail.html
+++ b/rentals/templates/rentals/flat_detail.html
@@ -2,7 +2,15 @@
 
 {% block content %}
   <header>
-    <h1>Krok 3. Zapoznaj się z ofertą i zarezerwuj mieszkanie </h1>
+    <div class="header-div">
+      <div class="menu-icons">
+        {% load static %}
+        <a href="{{request.META.HTTP_REFERER|escape}}"><img src="{% static 'img/back.png' %}" alt="back"/></a>
+      </div>
+      <div class="header-topic-div">
+        <h1>Step 3. Reserve your flat  </h1>
+      </div>
+    </div>
   </header>
   <article>
     <section>
@@ -12,31 +20,31 @@
             <form id="myform" action="" method="POST">
               {% csrf_token %}
               <div class="input-group form-parts">
-                {{ form.data_wynajecia }}
+                {{ form.date_of_rent }}
                 <div class="input-group-addon">
                     <span class="glyphicon-th"></span>
                 </div>
               </div>
               <div class="input-group form-parts">
-                {{ form.data_oddania }}
+                {{ form.date_of_surrender }}
                 <div class="input-group-addon">
                     <span class="glyphicon-th"></span>
                 </div>
               </div>
               <div class="input-group form-parts">
-                {{ form.nazwisko }}
+                {{ form.lastname }}
                 <div class="input-group-addon">
                     <span class="glyphicon-th"></span>
                 </div>
               </div>
               <div class="input-group form-parts">
-                {{ form.telefon }}
+                {{ form.phone_number }}
                 <div class="input-group-addon">
                     <span class="glyphicon-th"></span>
                 </div>
               </div>
               <div class="input-group form-parts">
-                {{ form.mieszkanie }}
+                {{ form.flat }}
                 <div class="input-group-addon">
                     <span class="glyphicon-th"></span>
                 </div>
@@ -58,24 +66,24 @@
         <div id="flat-detail-content">
           <div id="flat-detail-info">
           <div class="flat-list-prize">
-            <h2>{{flats.cena}} zł/dobę</h2>
+            <h2>{{flat.prize}} zł/dobę</h2>
           </div>
           <div id="flat-detail-header">
-            <h2>ul. {{flats.adres}}, {{flats.miasto}}</h2>
+            <h2>ul. {{flat.adress}}, {{flat.city}}</h2>
           </div>
-            <div class="{% if flats.kaucja %} kaucja-true {% else %} kaucja-false {% endif %} kaucja-div-position">
-                {% if flats.kaucja %}
-                  <h3>Kaucja: Tak</h3>
-                {% else %}
-                  <h3>Kaucja: Nie</h3>
-                {% endif %}
-            </div>
-            <div id="flat-details-desc">
-              {{ flats.opis }}
-            </div>
+          <div id="detail-deposit" class="{% if flat.deposit %} deposit-true {% else %} deposit-false {% endif %} deposit-div-position">
+              {% if flat.deposit %}
+                <h3>Kaucja: Tak</h3>
+              {% else %}
+                <h3>Kaucja: Nie</h3>
+              {% endif %}
+          </div>
+          <div id="flat-details-desc">
+            {{ flat.description }}
+          </div>
           </div>
           <div id="flat-detail-photo">
-            <img src="{{flats.zdjecie.url}}" alt="flat-photo">
+            <img src="{{flat.photo.url}}" alt="flat-photo">
           </div>
           <div class="clearboth">
           </div>
