--- a/rentals/templates/index.html
+++ b/rentals/templates/index.html
@@ -12,6 +12,10 @@
       <div class="jumbotron">
         <h2 class="display-4">Hello, friend! We've got {{ available_flats }} available flats!</h2>
         <p class="lead">Looking for a short term flat? You're in the right place!</p>
+        <div class="logo-div d-flex justify-content-center">
+          {% load static %}
+          <a href="{% url 'index'%}"> <img src="{% static 'img/logo.png' %}" alt="logo"> </a>
+        </div>
         <hr class="my-4">
         <p>We offer flats in Gdańsk, Gdynia, Sopot.</p>
         <p class="lead">
